IRODS tests and init for transfers